deploy/overlays/production/production-ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-hanaro
spec:
  tls:
    - hosts: [stock.example.com]
      secretName: stock-hanaro-tls
  rules:
    - host: stock.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stock-hanaro-frontend
                port: {number: 3000}
